--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.structurizr'
-version = '1.0.2'
+version = '1.1.0-alpha'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -19,10 +19,26 @@ dependencies {
 	}
 
 	compile 'commons-cli:commons-cli:1.4'
-	compile 'com.structurizr:structurizr-client:1.4.0'
+	compile 'com.structurizr:structurizr-client:1.4.1'
 	compile 'com.structurizr:structurizr-adr-tools:1.3.6'
+	compile 'com.structurizr:structurizr-plantuml:1.3.5'
+	compile 'com.structurizr:structurizr-websequencediagrams:1.3.5'
+
+	implementation files('lib/structurizr-dsl-1.0.0.jar')
 }
 
 test {
 	useJUnitPlatform()
+}
+
+task buildZip(type: Zip) {
+	from ('build/libs/') {
+		include 'structurizr-cli*.jar'
+	}
+	from ('.') {
+		include 'README.md'
+	}
+	from ('etc') {
+		include 'structurizr.sh'
+	}
 }
