--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ springBoot {
 }
 
 group = 'com.structurizr'
-version = '1.1.2'
+version = '1.2.0'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -26,6 +26,7 @@ dependencies {
 	compile 'com.structurizr:structurizr-client:1.4.5'
 	compile 'com.structurizr:structurizr-adr-tools:1.3.6'
 	compile 'com.structurizr:structurizr-plantuml:1.3.6'
+	compile 'com.structurizr:structurizr-mermaid:1.3.5'
 	compile 'com.structurizr:structurizr-websequencediagrams:1.3.6'
 
 	implementation files('lib/structurizr-dsl-1.0.0.jar')
