--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ springBoot {
 }
 
 group = 'com.structurizr'
-version = '1.3.1'
+version = '1.4.0'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -23,11 +23,12 @@ dependencies {
 	}
 
 	compile 'commons-cli:commons-cli:1.4'
-	compile 'com.structurizr:structurizr-client:1.4.8'
+	compile 'com.structurizr:structurizr-client:1.5.0'
 	compile 'com.structurizr:structurizr-adr-tools:1.3.6'
-	compile 'com.structurizr:structurizr-mermaid:1.3.6'
-	compile 'com.structurizr:structurizr-plantuml:1.4.0'
-	compile 'com.structurizr:structurizr-websequencediagrams:1.3.6'
+	compile 'com.structurizr:structurizr-ilograph:1.0.0'
+	compile 'com.structurizr:structurizr-mermaid:1.4.0'
+	compile 'com.structurizr:structurizr-plantuml:1.5.0'
+	compile 'com.structurizr:structurizr-websequencediagrams:1.4.0'
 
 	implementation files('lib/structurizr-dsl-1.0.0.jar')
 }
