trigger on push to dockerize

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,9 @@
 name: CI to Docker hub
 on:
   push:
-    branches: [ master, dockerize ]
+    branches:
+      - master
+      - dockerize
 
 jobs:
   build:
