--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          file: .docker/Dockerfile
+          file: docker/Dockerfile
           push: true
           tags: structurizr-cli:latest
       - name: Image digest
