--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,7 @@
 name: CI to Docker hub
+env:
+  REGISTRY: leopoldodonnell
+
 on:
   push:
     branches:
@@ -7,20 +10,24 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: docker/Dockerfile
-          push: true
-          tags: structurizr-cli:latest
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+    -
+      name: Checkout
+      uses: actions/checkout@v2
+    -
+      name: Setup up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    -
+      name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        registry: ${{ env.REGISTRY }}
+    -
+      name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: docker/Dockerfile
+        push: true
+        tags: ${{ env.REGISTRY }}/structurizr-cli:latest
