--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ task buildZip(type: Zip) {
 		include 'README.md'
 		include 'docs/*'
 		include 'docs/images/*'
+		include 'examples/**'
 	}
 	from ('etc') {
 		include 'structurizr.sh'
