--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ springBoot {
 }
 
 group = 'com.structurizr'
-version = '1.9.0'
+version = '1.10.0'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -23,14 +23,11 @@ dependencies {
 	}
 
 	compile 'commons-cli:commons-cli:1.4'
-	compile 'com.structurizr:structurizr-client:1.9.1'
+	compile 'com.structurizr:structurizr-client:1.9.2'
 	compile 'com.structurizr:structurizr-adr-tools:1.3.7'
-	compile 'com.structurizr:structurizr-ilograph:1.0.2'
-	compile 'com.structurizr:structurizr-mermaid:1.4.1'
-	compile 'com.structurizr:structurizr-plantuml:1.6.3'
-	compile 'com.structurizr:structurizr-websequencediagrams:1.4.1'
+	compile 'com.structurizr:structurizr-dsl:1.10.0'
+	compile 'com.structurizr:structurizr-export:1.0.0'
 
-	implementation files('lib/structurizr-dsl-1.0.0.jar')
 }
 
 test {
