--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,14 @@ repositories {
 dependencies {
 	implementation 'commons-cli:commons-cli:1.4'
 
-	implementation 'com.structurizr:structurizr-client:1.11.0'
-	implementation 'com.structurizr:structurizr-dsl:1.18.0'
-	implementation 'com.structurizr:structurizr-adr-tools:1.3.8'
-	implementation 'com.structurizr:structurizr-export:1.4.0'
+	implementation 'com.structurizr:structurizr-client:1.12.2'
+
+	implementation 'com.structurizr:structurizr-dsl:1.19.1'
+
+	implementation 'com.structurizr:structurizr-documentation:1.0.1'
+
+	implementation 'com.structurizr:structurizr-export:1.5.0'
+
 	implementation 'com.structurizr:structurizr-graphviz:1.6.1'
 
     implementation 'org.codehaus.groovy:groovy-jsr223:3.0.8'
