--- a/build.gradle
+++ b/build.gradle
@@ -2,33 +2,35 @@ plugins {
 	id 'java'
 }
 
+defaultTasks 'clean', 'build', 'getDeps', 'buildZip'
+
 description = 'Structurizr CLI'
 group = 'com.structurizr'
 version = '1.20.0'
+
 sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'commons-cli:commons-cli:1.4'
 
-	implementation 'com.structurizr:structurizr-client:1.12.2'
-
+	implementation 'com.structurizr:structurizr-client:1.14.1'
 	implementation 'com.structurizr:structurizr-dsl:1.19.1'
-
 	implementation 'com.structurizr:structurizr-documentation:1.0.1'
-
 	implementation 'com.structurizr:structurizr-export:1.5.0'
-
 	implementation 'com.structurizr:structurizr-graphviz:1.6.1'
 
-    implementation 'org.codehaus.groovy:groovy-jsr223:3.0.8'
-    implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.5.30'
-    implementation 'org.jruby:jruby-core:9.2.19.0'
+	implementation 'commons-cli:commons-cli:1.4'
+	implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
+	implementation 'org.codehaus.groovy:groovy-jsr223:3.0.12'
+    implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.7.10'
+    implementation 'org.jruby:jruby-core:9.3.6.0'
 
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+
 }
 
 test {
