Moved version to a gradle.properties file.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew -Pversion=1.0.0
+        run: ./gradlew
