--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	} else {
 		implementation 'com.structurizr:structurizr-dsl:1.20.0'
 		implementation 'com.structurizr:structurizr-export:1.7.0'
+		implementation 'io.github.goto1134:structurizr-d2-exporter:1.0.1'
 		implementation 'com.structurizr:structurizr-graphviz:1.6.1'
 	}
 
