--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 	implementation 'org.apache.logging.log4j:log4j-jcl:2.19.0'
 	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
 
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+
+
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 
 }
