--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ defaultTasks 'clean', 'build', 'getDeps', 'buildZip'
 
 description = 'Structurizr CLI'
 group = 'com.structurizr'
-version = '1.31.1'
+version = '1.32.0'
 
 sourceCompatibility = '11'
 targetCompatibility = '11'
@@ -17,21 +17,21 @@ repositories {
 
 dependencies {
 
-	implementation 'com.structurizr:structurizr-dsl:1.30.4'
-	implementation 'com.structurizr:structurizr-export:1.15.0'
+	implementation 'com.structurizr:structurizr-dsl:1.31.0'
+	implementation 'com.structurizr:structurizr-export:1.16.0'
 	implementation 'io.github.goto1134:structurizr-d2-exporter:1.5.1'
-	implementation 'com.structurizr:structurizr-graphviz:2.0.1'
+	implementation 'com.structurizr:structurizr-graphviz:2.2.0'
 
 	implementation 'commons-cli:commons-cli:1.5.0'
-	implementation 'org.codehaus.groovy:groovy-jsr223:3.0.13'
-    implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.7.22'
-    implementation 'org.jruby:jruby-core:9.4.0.0'
+	implementation 'org.apache.groovy:groovy-jsr223:4.0.12'
+	implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.7.22'
+    implementation 'org.jruby:jruby-core:9.4.2.0'
 
 	implementation 'commons-logging:commons-logging:1.2'
-	implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-	implementation 'org.apache.logging.log4j:log4j-jcl:2.19.0'
-	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
+	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+	implementation 'org.apache.logging.log4j:log4j-jcl:2.20.0'
+	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 
