Adds a command to merge layout information.

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation 'org.apache.logging.log4j:log4j-jcl:2.20.0'
 	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
 
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
 }
 
