--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,8 @@ dependencies {
 	implementation 'org.jruby:jruby-core:9.4.4.0'
 
 	implementation 'commons-logging:commons-logging:1.2'
-	implementation 'org.apache.logging.log4j:log4j-api:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-jcl:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.0'
+	implementation 'org.slf4j:jcl-over-slf4j:2.0.13'
+	implementation 'ch.qos.logback:logback-classic:1.5.6'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
@@ -47,6 +45,7 @@ test {
 sourceSets.main.resources {
 	srcDirs = ['src/main/resources']
 	include 'build.properties'
+	include 'META-INF/**'
 }
 
 jar {
