--- a/build.gradle
+++ b/build.gradle
@@ -13,31 +13,31 @@ targetCompatibility = 17
 
 repositories {
 	mavenCentral()
+//	mavenLocal()
 }
 
 dependencies {
-	def structurizrVersion = '3.0.0'
 
+	def structurizrVersion = '3.0.0'
 	implementation "com.structurizr:structurizr-dsl:${structurizrVersion}"
 	implementation "com.structurizr:structurizr-export:${structurizrVersion}"
 	implementation "com.structurizr:structurizr-autolayout:${structurizrVersion}"
 	implementation "com.structurizr:structurizr-inspection:${structurizrVersion}"
-
 	implementation 'io.github.goto1134:structurizr-d2-exporter:1.5.3'
 
-	implementation 'commons-cli:commons-cli:1.5.0'
+	implementation 'commons-cli:commons-cli:1.9.0'
 
-	implementation 'org.codehaus.groovy:groovy-jsr223:3.0.19'
-	implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.8.10'
-	implementation 'org.jruby:jruby-core:9.4.4.0'
+	implementation 'org.codehaus.groovy:groovy-jsr223:3.0.22'
+	implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.9.25'
+	implementation 'org.jruby:jruby-core:9.4.8.0'
 
-	implementation 'commons-logging:commons-logging:1.2'
-	implementation 'org.apache.logging.log4j:log4j-api:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-jcl:2.23.0'
-	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.0'
+	def log4jVersion = '2.24.0'
+	implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
+	implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
+	implementation "org.apache.logging.log4j:log4j-jcl:${log4jVersion}"
+	implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
 
-	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
 
 }
 
