--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,39 @@ test {
 	useJUnitPlatform()
 }
 
+def command(String... command) {
+    try {
+        return providers.exec {
+            commandLine command
+        }.standardOutput.asText.get().trim()
+    }
+    catch (e) {
+        e.printStackTrace();
+        return "";
+    }
+}
+
+def getVersionName = { ->
+    command 'git', 'describe', '--tags', '--dirty'
+}
+
+def getTimestamp = { ->
+    command 'date', '--utc', '+%FT%H:%M:%SZ'
+}
+
 sourceSets.main.resources {
 	srcDirs = ['src/main/resources']
 	include 'build.properties'
 	include 'static.zip'
+}
+
+processResources {
+    filesMatching('**/*.properties') {
+        filter { line ->
+            line.replaceAll('@BUILD_NUMBER@', getVersionName())
+                .replaceAll('@BUILD_DATE@', getTimestamp())
+        }
+    }
 }
 
 application {
