chore: wrap compatibility into java block

--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,10 @@ description = 'Structurizr CLI'
 group = 'com.structurizr'
 version = ''
 
-sourceCompatibility = 21
-targetCompatibility = 21
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
 repositories {
 	mavenCentral()
